virtual machines/ubuntu-minikube/Kubernetes/mysql/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
